--- a/profile-3d.yml
+++ b/profile-3d.yml
@@ -28,4 +28,8 @@ jobs:
           git add -A
           git commit -m "generated" || echo "No changes"
 
+          git pull --rebase         
+          git add -A                
+          git commit -m "generated" || echo "No changes"
+
           git push
