--- a/profile-3d.yml
+++ b/profile-3d.yml
@@ -25,11 +25,10 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          git add -A
-          git commit -m "generated" || echo "No changes"
+          # remote 최신 반영 (충돌 예방)
+          git pull --rebase
 
-          git pull --rebase         
-          git add -A                
+          git add -A
           git commit -m "generated" || echo "No changes"
 
           git push
