--- a/profile-3d.yml
+++ b/profile-3d.yml
@@ -14,6 +14,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 
 
       - uses: yoshi389111/github-profile-3d-contrib@0.6.0
         env:
@@ -25,7 +27,6 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-          # remote 최신 반영 (충돌 예방)
           git pull --rebase
 
           git add -A
