--- a/profile-3d.yml
+++ b/profile-3d.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 
+          token: ${{ github.token }}
 
       - uses: yoshi389111/github-profile-3d-contrib@0.6.0
         env:
