--- a/profile-3d.yml
+++ b/profile-3d.yml
@@ -16,7 +16,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 
-          token: ${{ github.token }}
 
       - uses: yoshi389111/github-profile-3d-contrib@0.6.0
         env:
@@ -27,6 +26,8 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+          git remote set-url origin https://${{ github.token }}@github.com/${{ github.repository }}
 
           git pull --rebase
 
