--- a/profile-3d.yml
+++ b/profile-3d.yml
@@ -15,9 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0 
+          fetch-depth: 0
 
       - uses: yoshi389111/github-profile-3d-contrib@0.6.0
+        with:
+          commit: false     
         env:
           GITHUB_TOKEN: ${{ github.token }}
           USERNAME: ${{ github.repository_owner }}
