--- a/profile-3d.yml
+++ b/profile-3d.yml
@@ -37,4 +37,4 @@ jobs:
           git add -A
           git commit -m "generated" || echo "No changes"
 
-          git push --force-with-lease
+          git push origin HEAD:main --force-with-lease
