--- a/profile-3d.yml
+++ b/profile-3d.yml
@@ -16,10 +16,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
+          ref: main              
       - uses: yoshi389111/github-profile-3d-contrib@0.6.0
         with:
-          commit: false     
+          commit: false
         env:
           GITHUB_TOKEN: ${{ github.token }}
           USERNAME: ${{ github.repository_owner }}
@@ -37,4 +37,4 @@ jobs:
           git add -A
           git commit -m "generated" || echo "No changes"
 
-          git push origin HEAD:main --force-with-lease
+          git push origin HEAD:refs/heads/main --force-with-lease
